--- a/scss/main.css
+++ b/scss/main.css
@@ -11,6 +11,23 @@ html, body {
 .page-wrapper {
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
+}
+
+.page-wrapper::before {
+  content: '';
+  padding-top: 45%;
+  margin-top: -200px;
+  margin-left: -20%;
+  width: 200%;
+  left: 0;
+  top: 0;
+  background: #203043;
+  position: absolute;
+  overflow: hidden;
+  -webkit-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+  z-index: -10000;
 }
 
 .CTA {
@@ -24,15 +41,6 @@ html, body {
   font-size: 14px;
   color: #FFFFFF;
   text-transform: uppercase;
-}
-
-.bg {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: -1000;
 }
 
 header.header nav {
@@ -284,12 +292,27 @@ main .contact .inner h2 {
   margin: 0;
 }
 
+footer::before {
+  content: '';
+  padding-bottom: 70%;
+  margin-left: -10%;
+  width: 200%;
+  left: 0;
+  bottom: 0;
+  background: #203043;
+  position: absolute;
+  -webkit-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+  z-index: -10000;
+}
+
 footer {
   color: #ffffff;
   border-top: 4px solid #ffffff;
   margin-top: 15vh;
   padding-top: 40px;
   padding-bottom: 5vh;
+  overflow: hidden;
 }
 
 footer .name {
@@ -373,14 +396,5 @@ footer .contactInfo a {
   line-height: normal;
   font-size: 18px;
   color: #46596F;
-}
-
-.rect {
-  position: absolute;
-  z-index: -10000;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
 }
 /*# sourceMappingURL=main.css.map */
