--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,25 @@ html, body {
 .page-wrapper {
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
 }
+
+.page-wrapper::before {
+  content: '';
+  padding-top: 45%;
+  margin-top: -200px;
+  margin-left: -20%;
+  width: 200%;
+  left: 0;
+  top: 0;
+  background: #203043;
+  position: absolute;
+  overflow: hidden;
+  transform: rotate(-5deg);
+  z-index: -10000;
+}
+
+
 
 .CTA {
   border: none;
@@ -25,6 +43,8 @@ html, body {
   color: #FFFFFF;
   text-transform: uppercase;
 }
+
+
 
 @import 'header';
 @import 'main';
