--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,7 +44,12 @@ html, body {
   text-transform: uppercase;
 }
 
-
+.rect {
+  position: absolute;
+  z-index: -10000;
+  width: 100%;
+  bottom: 0;
+}
 
 @import 'header';
 @import 'main';
